exports[`Components Form Renders a date input when type is set to date 1`] = `
<label
  className="Form-InputField-label"
  htmlFor="name">
  <input
    autoFocus={undefined}
    className="Form-InputField Form-InputField-date"
    id="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="" />
</label>
`;

exports[`Components Form Renders a textarea when type is set to textarea 1`] = `
<label
  className="Form-InputField-label"
  htmlFor="name">
  <textarea
    autoFocus={undefined}
    className="Form-InputField Form-InputField-textarea"
    id="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="" />
</label>
`;

exports[`Components Form Renders an input field with a label when label is given 1`] = `
<label
  className="Form-InputField-label"
  htmlFor="name">
  The label yo
  <input
    autoFocus={undefined}
    className="Form-InputField"
    id="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="" />
</label>
`;

exports[`Components Form Renders an input field without a label 1`] = `
<label
  className="Form-InputField-label"
  htmlFor="name">
  <input
    autoFocus={undefined}
    className="Form-InputField"
    id="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="" />
</label>
`;
